; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_pushed_error.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_pushed_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32)* @pushed_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pushed_error(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp slt i32 %9, 0
  %11 = zext i1 %10 to i32
  store i32 %11, i32* %8, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @jctx(i32* %12)
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = load i32, i32* %6, align 4
  %19 = call i32* @mpv_error_string(i32 %18)
  br label %21

20:                                               ; preds = %3
  br label %21

21:                                               ; preds = %20, %17
  %22 = phi i32* [ %19, %17 ], [ null, %20 ]
  %23 = call i32 @set_last_error(i32 %13, i32 %14, i32* %22)
  %24 = load i32, i32* %8, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %27, label %26

26:                                               ; preds = %21
  store i32 0, i32* %4, align 4
  br label %31

27:                                               ; preds = %21
  %28 = load i32*, i32** %5, align 8
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @js_copy(i32* %28, i32 %29)
  store i32 1, i32* %4, align 4
  br label %31

31:                                               ; preds = %27, %26
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @set_last_error(i32, i32, i32*) #1

declare dso_local i32 @jctx(i32*) #1

declare dso_local i32* @mpv_error_string(i32) #1

declare dso_local i32 @js_copy(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
